--- a/ProyectoIntegrado/Front/package.json
+++ b/ProyectoIntegrado/Front/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.19.2",
     "boostrap": "^2.0.0",
     "core-js": "^3.6.5",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.5.3",
     "moment": "^2.25.3",
     "sweetalert": "^2.1.2",
     "vue": "^2.5.2",
